nav BS de base ok

--- a/index.html
+++ b/index.html
@@ -4,21 +4,32 @@
 <head>
     <title>1 2 3 VETO</title>
     <meta charset="utf-8">
+    <!-- styles css / bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- <Script JS> -->
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
 
 <body>
     <div class="container-fluid">
-       <!-- menu de navigation -->
-       <nav>
-           <ul>
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Fiches conseil</a></li>
-               <li><a href="#">Prestations & Tarifs</a></li>
-               <li><a href="#">Contact</a></li>
-           </ul>
-       </nav>
-       
+        <!-- menu de navigation -->
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">123 VETO</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Fiches conseil</a></li>
+                    <li><a href="#">Prestations & Tarifs</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+
         <!-- en-tête du site -->
         <header>
 
