--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <div class="container-fluid">
         <!-- menu de navigation -->
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
+        <nav class="navbar navbar-fixed-top">
+            <div class="container-fluid nav-style">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
@@ -31,10 +31,10 @@
                     <a class="navbar-brand" href="#"><strong>123 VETO</strong></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Fiches conseil</a></li>
-                    <li><a href="#">Prestations & Tarifs</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="active"><a href="#">HOME</a></li>
+                    <li><a href="#">FICHES CONSEIL</a></li>
+                    <li><a href="#">PRESTATION & TARIFS</a></li>
+                    <li><a href="#">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
