--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
 
         <!-- section présentation de l'entreprise -->
         <section class="row text-center">
-            <div class="section-header">
+            <div id="fond-orange" class="section-header">
                 <h2 class="text-center">À la découverte de notre clinique</h2>
             </div>
             <div class="col-md-3 pad-40">
-                <i class="fa fa-5x fa-paw"></i>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime, quaerat excepturi nobis corporis sapiente magnam aut enim, quidem consectetur adipisci doloremque, harum. Beatae, aspernatur, blanditiis?</p>
+                <i class="fa fa-5x fa-info-circle"></i>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
+            </div>
+            <div class="col-md-3 pad-40">
+                <i class="fa fa-5x fa-stethoscope"></i>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
+            </div>
+            <div class="col-md-3 pad-40">
+                <i class="fa fa-5x fa-heart"></i>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
             </div>
             <div class="col-md-3 pad-40">
                 <i class="fa fa-5x fa-paw"></i>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime, quaerat excepturi nobis corporis sapiente magnam aut enim, quidem consectetur adipisci doloremque, harum. Beatae, aspernatur, blanditiis?</p>
-            </div>
-            <div class="col-md-3 pad-40">
-                <i class="fa fa-5x fa-paw"></i>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime, quaerat excepturi nobis corporis sapiente magnam aut enim, quidem consectetur adipisci doloremque, harum. Beatae, aspernatur, blanditiis?</p>
-            </div>
-            <div class="col-md-3 pad-40">
-                <i class="fa fa-5x fa-paw"></i>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime, quaerat excepturi nobis corporis sapiente magnam aut enim, quidem consectetur adipisci doloremque, harum. Beatae, aspernatur, blanditiis?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime.</p>
             </div>
         </section>
 
@@ -88,8 +88,14 @@
             <p class="text-center col-md-4 col-md-offset-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, dolor libero nisi odit? Ullam voluptatibus maiores architecto obcaecati. Quo sed amet sequi veritatis quaerat, earum asperiores inventore molestiae aut quod.</p>
         </section>
 
+        <!-- Section fiches conseil -->
         <section class="row">
-
+        <img class="col-md-6" src="" alt=""/>
+        <img class="col-md-6" src="" alt=""/>
+        <img class="col-md-6" src="" alt=""/>
+        <img class="col-md-6" src="" alt=""/>
+        <img class="col-md-6" src="" alt=""/>
+        <img class="col-md-6" src="" alt=""/>
         </section>
 
         <section>
