mosaique + hover img - pas fini

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- section présentation de l'entreprise -->
         <section class="row text-center">
             <div id="fond-orange" class="section-header">
-                <h2 class="text-center">À la découverte de notre clinique</h2>
+                <h2 class="text-center text-capitalize">À la découverte de notre clinique</h2>
             </div>
             <div class="col-md-3 pad-40">
                 <i class="fa fa-5x fa-info-circle"></i>
@@ -76,7 +76,7 @@
         <!--section équipe-->
         <section class="row">
             <div class="section-header">
-                <h2 class="text-center">Notre équipe</h2>
+                <h2 class="text-center text-capitalize">Notre équipe</h2>
             </div>
             <div class="col-md-6">
                 <img class="img-responsive img-circle avatar" src="http://lorempicsum.com/rio/400/400/1" alt="">
@@ -88,17 +88,48 @@
             <p class="text-center col-md-4 col-md-offset-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, dolor libero nisi odit? Ullam voluptatibus maiores architecto obcaecati. Quo sed amet sequi veritatis quaerat, earum asperiores inventore molestiae aut quod.</p>
         </section>
 
-        <!-- Section fiches conseil -->
+        <!-- section fiches conseils -->
         <section class="row">
-        <img class="col-md-6" src="" alt=""/>
-        <img class="col-md-6" src="" alt=""/>
-        <img class="col-md-6" src="" alt=""/>
-        <img class="col-md-6" src="" alt=""/>
-        <img class="col-md-6" src="" alt=""/>
-        <img class="col-md-6" src="" alt=""/>
-        </section>
+            <div class="section-header">
+                <h2 class="text-center text-capitalize">Les fiches conseils</h2></div>
 
-        <section>
+            <a href="#" class="col-md-6">
+                <div class="hovereffect">
+                    <img src="images/example-01.jpg" alt="" class="img-responsive">
+                    <div class="overlay">
+                        <h3>Lorem</h3>
+                    </div>
+                </div>
+            </a>
+
+            <a href="#" class="col-md-6">
+                <div class="hovereffect">
+                    <img src="images/example-01.jpg" alt="" class="img-responsive">
+                    <div class="overlay">
+                        <p>LINK +</p>
+                    </div>
+                </div>
+            </a>
+
+            <a href="#" class="col-md-6">
+                <div class="hovereffect">
+                    <img src="images/example-01.jpg" alt="" class="img-responsive">
+                    <div class="overlay">
+                        <h3>Lorem</h3>
+                    </div>
+                </div>
+            </a>
+
+            <a href="#" class="col-md-6">
+                <div class="hovereffect">
+                    <img src="images/example-01.jpg" alt="" class="img-responsive">
+                    <div class="overlay">
+                        <h3>Lorem</h3>
+                    </div>
+                </div>
+            </a>
+
+
 
         </section>
 
