Mise en place de la page prestation

--- a/prestation.html
+++ b/prestation.html
@@ -31,9 +31,9 @@
                     <a class="navbar-brand" href="#"><strong>123 VETO</strong></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right" id="myNavbar">
-                    <li class="active"><a href="#">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#">FICHES CONSEIL</a></li>
-                    <li><a href="#">PRESTATION & TARIFS</a></li>
+                    <li class="active"><a href="#">PRESTATION & TARIFS</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </ul>
             </div>
@@ -55,45 +55,91 @@
             <div fond-orange" class="section-header fond-orange">
                 <h2 class="text-center">TARIFS ET PRESTATIONS</h2>
             </div>
+        </section>
 
-            <div class="col-md-6 pad-70">
-                <div class="hovereffect">
-                <i class="fa fa-5x fa-stethoscope icone_prestation"></i>
+        <nav class="row nav-prestations">
+            <div class="col-md-1 col-xs-1">
+                <i class="fa fa-2x fa-stethoscope"></i>
+                <i class="fa fa-2x fa-camera"></i>
+                <i class="fa fa-2x fa-medkit"></i>
+                <i class="fa fa-2x fa-heartbeat"></i>
+                <i class="fa fa-2x fa-hospital-o"></i>
+                <i class="fa fa-2x fa-paw"></i>
+                <i class="fa fa-2x fa-eur"></i>
+            </div>
+        </nav>
+        <!--<div class="separator-objet"></div>-->
+
+        <section class="row section-prestation">
+
+            <div id="consultation" class="col-md-12 prestations">
+            <div class="row">
+                <img src="images/pension-nac.jpg" class="img-circle col-md-offset-1 col-md-1 col-xs-12 img-prestations img-responsive">
+            <div class="col-md-8 col-xs-10">
                 <h3>CONSULTATION</h3>
-                <div class="overlay">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
-                </div>
-                </div>
+            </div>
+            </div>
             </div>
 
-            <div class="col-md-6 pad-70">
-                <i class="fa fa-5x fa-user-md"></i>
+            <div id="consultation" class="col-md-12 prestations">
+            <div class="row">
+                <img src="images/veto.jpg" class="img-circle col-md-offset-1 col-md-1 img-prestations img-responsive">
+            <div class="col-md-8 col-xs-10">
                 <h3>IMAGERIE</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
             </div>
+            </div>
+            </div>
 
-            <div class="col-md-6 pad-70">
-                <i class="fa fa-5x fa-medkit"></i>
+            <div id="consultation" class="col-md-12 prestations">
+            <div class="row">
+                <img src="images/pension-nac.jpg" class="img-circle col-md-offset-1 col-md-1 img-prestations img-responsive">
+            <div class="col-md-8 col-xs-10">
                 <h3>ANALYSE SANGUINE</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
             </div>
+            </div>
+            </div>
 
-            <div class="col-md-6 pad-70">
-                <i class="fa fa-5x fa-heartbeat"></i>
+            <div id="consultation" class="col-md-12 prestations">
+            <div class="row">
+                <img src="images/veto.jpg" class="img-circle col-md-offset-1 col-md-1 img-prestations img-responsive">
+            <div class="col-md-8 col-xs-10">
                 <h3>CHIRURGIE</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
             </div>
+            </div>
+            </div>
 
-            <div class="col-md-6 pad-70">
-                <i class="fa fa-5x fa-h-square"></i>
+            <div id="consultation" class="col-md-12 prestations">
+            <div class="row">
+                <img src="images/pension-nac.jpg" class="img-circle col-md-offset-1 col-md-1 img-prestations img-responsive">
+            <div class="col-md-8 col-xs-10">
                 <h3>HOSPITALISATION</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
             </div>
+            </div>
+            </div>
 
-            <div class="col-md-6 pad-70">
-                <i class="fa fa-5x fa-paw"></i>
-                <h3>NAC</h3>
+            <div id="consultation" class="col-md-12 prestations">
+            <div class="row">
+                <img src="images/veto.jpg" class="img-circle col-md-offset-1 col-md-1 img-prestations img-responsive">
+            <div class="col-md-8 col-xs-10">
+                <h3>NAC<small> - Nouveaux animaux de compagnie</small></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+            </div>
+            </div>
+            </div>
+
+            <div id="consultation" class="col-md-12 prestations">
+            <div class="row">
+                <img src="images/pension-nac.jpg" class="img-circle col-md-offset-1 col-md-1 img-prestations img-responsive">
+            <div class="col-md-8 col-xs-10">
+                <h3>INFORMATIONS & TARIFS</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam, harum quos id distinctio soluta at veniam praesentium. Dignissimos, ab, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias. Temporibus maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore sunt, excepturi ducimus ut exercitationem esse saepe facilis obcaecati magnam.</p>
+            </div>
+            </div>
             </div>
         </section>
 
