grosse amélioration navbar - color + js pour transparence

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- <Script JS> -->
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/navbar-transparent.js"></script>
     <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/font-awesome.css" />
@@ -51,7 +52,7 @@
         </header>
 
         <!-- section présentation de l'entreprise -->
-        <section class="row text-center">
+        <section id="startchange" class="row text-center">
             <div id="fond-orange" class="section-header">
                 <h2 class="text-center text-capitalize">À la découverte de notre clinique</h2>
             </div>
