Fixe d'une classe mal déclaré

--- a/prestation.html
+++ b/prestation.html
@@ -52,7 +52,7 @@
 
         <!-- section présentation de l'entreprise -->
         <section class="row text-center">
-            <div fond-orange" class="section-header fond-orange">
+            <div class="section-header fond-orange">
                 <h2 class="text-center">TARIFS ET PRESTATIONS</h2>
             </div>
         </section>
