--- a/prestation.html
+++ b/prestation.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/navbar-transparent.js"></script>
+    <script type="text/javascript" src="js/navbar-prestation.js"></script>
     <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'/>
     <link rel="stylesheet" href="css/font-awesome.css"/>
@@ -70,7 +71,7 @@
         </nav>
         <!--<div class="separator-objet"></div>-->
 
-        <section class="row prestation">
+        <section id="navbar-prestation" class="row prestation">
 
             <div id="consultation" class="col-md-offset-2 col-md-8">
                 <div class="col-md-4">
@@ -84,7 +85,7 @@
 
             <div id="imagerie" class="col-md-offset-2 col-md-8">
                 <div class="col-md-4">
-                    <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
+                    <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3>Titre</h3>
@@ -104,7 +105,7 @@
 
             <div id="chirurgie" class="col-md-offset-2 col-md-8">
                 <div class="col-md-4">
-                    <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
+                    <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3>Titre</h3>
@@ -124,7 +125,7 @@
 
             <div id="nac" class="col-md-offset-2 col-md-8">
                 <div class="col-md-4">
-                    <img class="img-responsive img-circle" src="images/example-01.jpg" alt="chat">
+                    <img class="img-responsive img-circle" src="images/pension-nac.jpg" alt="chat">
                 </div>
                 <div class="col-md-8">
                     <h3>Titre</h3>
